package sample.impl;

public class ManageAttractionUsageImpl {
    public void view_visitors_queue(int id, int salary) {

    }

    public void view_visitors_on_attraction(int id, int salary) {

    }

    public void launch_attraction() {

    }

    private int session_time() {
        return 0;
    }

    private int past_session_time() {
        return 0;
    }

    private int number_of_seats() {
        return 0;
    }

    private int occupied_seats() {
        return 0;
    }
}
