package sample.impl;

import javafx.collections.ObservableList;
import sample.Attraction;

public class ManageAttractionsImpl {
    public void purchase_attraction(ManageAttractionSalesImpl manageAttractionSales) {

    }

    public boolean delete_attraction(String name) {
        return true;
    }

    public void view_attraction(ManageAttractionUsageImpl manageAttractionUsage) {

    }

    public ObservableList<Attraction> view_list_attractions(String name) {
           return null;
    }
}
