package sample.impl;

import javafx.collections.ObservableList;
import sample.Visitor;

public class ManageMainAlleyImpl {
    public void purchase_attraction(ManageAttractionSalesImpl manageAttractionSales) {

    }

    public boolean delete_attraction(String name) {
        return true;
    }

    public ObservableList<Visitor> view_visitors_on_alley(int id, int salary) {
        return null;
    }

    public void return_to_object_selection(ManageParkImpl managePark) {

    }
}
