package sample.impl;

public class ManageParkImpl {

    public int park_budget() {
        return 0;
    }

    public void edit_visitors(ManageVisitorsImpl manageVisitors) {

    }

    public void edit_attractions(ManageAttractionsImpl manageAttractions) {

    }
}
